--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -14,8 +14,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 0 0 80px 0;
     background-color: var(--background-color);
     color: var(--black);
