--- a/FrontEnd/src/components/topbar/topbar.css
+++ b/FrontEnd/src/components/topbar/topbar.css
@@ -1,10 +1,12 @@
 .topbar {
+    box-sizing: border-box;
     width: 100%;
     height: 100px;
     position: sticky;
     top: 0;
     z-index: 999;
-    margin-bottom: 40px;
+    margin-bottom: 100px;
+    background-color: var(--background-color);
 }
 
 .topbar-wrapper {
