--- a/FrontEnd/src/pages/user/board/view.css
+++ b/FrontEnd/src/pages/user/board/view.css
@@ -49,6 +49,11 @@
     margin: 20px 0;
 }
 
+.view-pagination {
+    display: flex;
+    justify-content: center;
+}
+
 .view-pagination-button {
     width: 160px;
     height: 40px;
