--- a/FrontEnd/src/pages/common/signup/signup.css
+++ b/FrontEnd/src/pages/common/signup/signup.css
@@ -45,3 +45,10 @@
     background-color: var(--blue);
     color: var(--white);
 }
+
+.signup-error-msg {
+    color: red;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
