그래프, 검색 기능

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -7,6 +7,8 @@
     --white: #f2f2f2;
     --blue: #5983d9;
     --green: #a1a640;
+    --positive: #e94560;
+    --negative: #006dee;
 }
 
 .container {
