--- a/FrontEnd/src/pages/user/board/board.css
+++ b/FrontEnd/src/pages/user/board/board.css
@@ -1,8 +1,8 @@
 .board {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .board-write-button {
@@ -20,7 +20,6 @@
 
 .board-table {
     width: 800px;
-    height: 600px;
     border-collapse: collapse;
     border-top: none; /* 위쪽 테두리 제거 */
     border-left: none; /* 왼쪽 테두리 제거 */
@@ -33,6 +32,7 @@
     border-left: none; /* 왼쪽 테두리 제거 */
     border-right: none; /* 오른쪽 테두리 제거 */
     text-align: center;
+    height: 40px;
 }
 
 .board-table th {
