--- a/FrontEnd/src/pages/user/search/search.css
+++ b/FrontEnd/src/pages/user/search/search.css
@@ -1,19 +1,39 @@
 .search {
     width: 800px;
-    margin-bottom: 360px;
+    height: 72vh;
 }
 
 .search-title {
+    display: flex;
     font-family: var(--font-1);
     font-size: 20px;
     margin-bottom: 16px;
     color: var(--white);
+    align-items: end;
+}
+
+.search-title p {
+    margin-left: 16px;
 }
 
 .search-input {
     width: 100%;
     border-radius: 4px;
     height: 40px;
+}
+
+.search-list {
+    font-family: var(--font-1);
+    color: var(--blue);
+    margin-top: 40px;
+    border: 1px solid var(--white);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px; /* 각 항목 사이의 간격을 조정 */
+}
+
+.search-list-item {
+    color: var(--white);
 }
 
 .search-pagination {
