--- a/FrontEnd/src/pages/user/board/view.css
+++ b/FrontEnd/src/pages/user/board/view.css
@@ -8,6 +8,12 @@
     margin: 20px 0;
 }
 
+.view-author {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
 #title {
     font-family: var(--font-1);
     font-size: 16px;
