Revert "Merge branch 'seunga'"
This reverts commit e0221ec3b7a3d65abff9b47d3393c9f9d9950e09, reversing
changes made to fd5831e9fb55721bde7627f859b737ee86fe75b4.

--- a/FrontEnd/src/pages/user/board/board.css
+++ b/FrontEnd/src/pages/user/board/board.css
@@ -1,4 +1,5 @@
 .board {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -45,6 +46,7 @@
 .board-table td {
     color: var(--white);
     border-bottom: 1px solid var(--white);
+    cursor: pointer;
 }
 
 #post-number {
