--- a/FrontEnd/src/pages/user/board/modify.css
+++ b/FrontEnd/src/pages/user/board/modify.css
@@ -47,6 +47,9 @@
     margin-top: 16px;
     margin-bottom: 40px;
 }
+.modify-content {
+    margin: 20px 0;
+}
 
 .modify-pagination-button {
     width: 160px;
