--- a/FrontEnd/src/pages/user/board/board.css
+++ b/FrontEnd/src/pages/user/board/board.css
@@ -21,7 +21,7 @@
 
 .board-table {
     width: 800px;
-    height: 600px;
+    //height: 600px;
     border-collapse: collapse;
     border-top: none; /* 위쪽 테두리 제거 */
     border-left: none; /* 왼쪽 테두리 제거 */
