유저 게시판 최종완성

--- a/FrontEnd/src/components/topbar/topbar.css
+++ b/FrontEnd/src/components/topbar/topbar.css
@@ -40,3 +40,13 @@
 .topbar-menu.active {
     color: var(--blue);
 }
+
+.topbar-button {
+    font-family: var(--font-1);
+    color: var(--white);
+    background-color: var(--background-color);
+}
+
+.topbar-button.active {
+    color: var(--blue);
+}
