--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,7 +1,7 @@
 #root {
-    --font-1: 'GongGothicMedium';
-    --font-2: 'paybooc-Bold';
-    --background-color: #001634;
+    --font-1: 'KBO-Dia-Gothic_bold';
+    --font-2: 'NEXON Lv2 Gothic';
+    --background-color: #001231;
     --black: #030303;
     --gray: #4f4f4f;
     --white: #f2f2f2;
