--- a/FrontEnd/src/pages/user/main/main.css
+++ b/FrontEnd/src/pages/user/main/main.css
@@ -1,6 +1,7 @@
 .main-container {
     width: 800px;
     height: 72vh;
+    margin-bottom: 60px;
 }
 
 .main-chart-container {
@@ -22,7 +23,6 @@
 
 .main-table {
     width: 100%;
-    height: 400px;
     border-collapse: collapse;
     border-top: none; /* 위쪽 테두리 제거 */
     border-left: none; /* 왼쪽 테두리 제거 */
@@ -35,6 +35,7 @@
     border-left: none; /* 왼쪽 테두리 제거 */
     border-right: none; /* 오른쪽 테두리 제거 */
     text-align: center;
+    height: 32px;
 }
 
 .main-table th {
