전체디자인수정

--- a/FrontEnd/src/assets/font.css
+++ b/FrontEnd/src/assets/font.css
@@ -8,9 +8,8 @@
 
 /*강조 폰트*/
 @font-face {
-    font-family: 'KBO-Dia-Gothic_bold';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/KBO-Dia-Gothic_bold.woff')
-        format('woff');
-    font-weight: 700;
+    font-family: 'GongGothicMedium';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
