--- a/FrontEnd/src/pages/user/board/write.css
+++ b/FrontEnd/src/pages/user/board/write.css
@@ -1,5 +1,6 @@
 .write {
     color: var(--white);
+    margin-bottom: 120px;
 }
 
 .write-date {
@@ -62,7 +63,7 @@
     width: 160px;
     height: 40px;
     border: none;
-    border-radius: 4px;
+    border-radius: 16px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 16px;
