--- a/FrontEnd/src/pages/user/mypage/mypage.css
+++ b/FrontEnd/src/pages/user/mypage/mypage.css
@@ -9,7 +9,7 @@
     font-family: var(--font-1);
     font-size: 20px;
     margin-bottom: 16px;
-    color: var(--green);
+    color: var(--white);
 }
 
 .mypage-subtitle {
