--- a/FrontEnd/src/components/chart/chartBar.css
+++ b/FrontEnd/src/components/chart/chartBar.css
@@ -2,14 +2,14 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
     color: var(--black);
-    border-radius: 0 0 4px 4px;
+    border-bottom: 1px solid var(--white);
+    border-left: 1px solid var(--white);
+    border-right: 1px solid var(--white);
     padding: 0 8px;
 }
 
 .custom-tooltip {
-    background-color: white;
     padding: 4px;
     border-radius: 4px;
     box-shadow: 0px 0px 4px gray;
