--- a/FrontEnd/src/components/chart/chartLine.css
+++ b/FrontEnd/src/components/chart/chartLine.css
@@ -2,9 +2,10 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
     color: var(--black);
-    border-radius: 4px 4px 0 0;
+    border-top: 1px solid var(--white);
+    border-left: 1px solid var(--white);
+    border-right: 1px solid var(--white);
     padding: 8px;
 }
 
