--- a/FrontEnd/src/pages/user/board/board.css
+++ b/FrontEnd/src/pages/user/board/board.css
@@ -10,8 +10,8 @@
     width: 60px;
     height: 20px;
     border: none;
-    border-radius: 4px;
-    background-color: var(--blue);
+    border-radius: 8px;
+    background-color: var(--green);
     color: var(--white);
     font-size: 12px;
     font-family: var(--font-1);
@@ -70,7 +70,7 @@
     width: 160px;
     height: 40px;
     border: none;
-    border-radius: 4px;
+    border-radius: 16px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 16px;
