--- a/FrontEnd/src/pages/user/investment/investment.css
+++ b/FrontEnd/src/pages/user/investment/investment.css
@@ -5,7 +5,7 @@
 
 .investment-title {
     font-family: var(--font-1);
-    color: var(--green);
+    color: var(--white);
     font-size: 20px;
     margin-bottom: 16px;
 }
@@ -84,7 +84,7 @@
     width: 160px;
     height: 40px;
     border: none;
-    border-radius: 4px;
+    border-radius: 16px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 16px;
