--- a/FrontEnd/src/pages/user/search/search.css
+++ b/FrontEnd/src/pages/user/search/search.css
@@ -9,7 +9,7 @@
     font-family: var(--font-1);
     font-size: 20px;
     margin-bottom: 16px;
-    color: var(--green);
+    color: var(--white);
     align-items: end;
 }
 
@@ -25,12 +25,15 @@
 
 .search-list {
     font-family: var(--font-1);
-    color: var(--blue);
+    color: var(--green);
     margin-top: 40px;
-    border: 1px solid var(--white);
+    border: 1px solid var(--green);
     display: flex;
     flex-wrap: wrap;
     gap: 4px; /* 각 항목 사이의 간격을 조정 */
+    padding: 4px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 12px;
 }
 
 .search-list-item {
@@ -46,41 +49,7 @@
     width: 160px;
     height: 40px;
     border: none;
-    border-radius: 4px;
-    background-color: var(--blue);
-    color: var(--white);
-    font-size: 16px;
-    font-family: var(--font-1);
-    margin-top: 200px;
-}
-.search {
-    width: 800px;
-    margin-bottom: 360px;
-}
-
-.search-title {
-    font-family: var(--font-1);
-    font-size: 20px;
-    margin-bottom: 16px;
-    color: var(--white);
-}
-
-.search-input {
-    width: 100%;
-    border-radius: 4px;
-    height: 40px;
-}
-
-.search-pagination {
-    display: flex;
-    justify-content: center;
-}
-
-.search-pagination-button {
-    width: 160px;
-    height: 40px;
-    border: none;
-    border-radius: 4px;
+    border-radius: 16px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 16px;
