topbar 디자인 수정

--- a/FrontEnd/src/components/topbar/topbar.css
+++ b/FrontEnd/src/components/topbar/topbar.css
@@ -42,11 +42,9 @@
 }
 
 .topbar-button {
-    font-family: var(--font-1);
     color: var(--white);
-    background-color: var(--background-color);
 }
 
 .topbar-button.active {
-    color: var(--blue);
+    color: var(--green);
 }
