--- a/FrontEnd/src/pages/manager/account/accountM.css
+++ b/FrontEnd/src/pages/manager/account/accountM.css
@@ -49,3 +49,22 @@
     text-align: center;
     color: var(--white);
 }
+
+.account-pagination {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.account-pagination-button {
+    width: 160px;
+    height: 40px;
+    border: none;
+    border-radius: 4px;
+    background-color: var(--blue);
+    color: var(--white);
+    font-size: 16px;
+    margin: 60px;
+    font-family: var(--font-1);
+}
