--- a/FrontEnd/src/pages/user/mypage/mypage.css
+++ b/FrontEnd/src/pages/user/mypage/mypage.css
@@ -134,3 +134,16 @@
     padding: 4px 0;
     text-align: center;
 }
+
+.mypage-admin-button {
+    width: 60px;
+    height: 20px;
+    border: none;
+    border-radius: 8px;
+    background-color: var(--green);
+    color: var(--white);
+    font-size: 12px;
+    font-family: var(--font-1);
+    margin-left: 720px;
+    margin-bottom: 12px;
+}
