--- a/FrontEnd/src/pages/common/login/login.css
+++ b/FrontEnd/src/pages/common/login/login.css
@@ -43,7 +43,7 @@
     width: 360px;
     height: 40px;
     border-radius: 8px;
-    margin-top: 20px;
+    margin: 20px;
     background-color: var(--blue);
     color: var(--white);
     box-shadow: 0px 0px 2px #384d77;
@@ -52,7 +52,6 @@
 .login-text {
     font-size: 12px;
     color: var(--gray);
-    margin-top: 8px;
     margin-right: 8px;
 }
 
