--- a/FrontEnd/src/pages/manager/account/accountM.css
+++ b/FrontEnd/src/pages/manager/account/accountM.css
@@ -21,13 +21,15 @@
     width: 85%;
     height: 40px;
     border-radius: 4px;
+    box-sizing: border-box;
+    padding-left: 16px;
 }
 
 .account-search-button {
     background-color: var(--blue);
     margin-left: 20px;
     width: 10%;
-    border-radius: 4px;
+    border-radius: 16px;
 }
 
 .account-table {
@@ -61,7 +63,7 @@
     width: 160px;
     height: 40px;
     border: none;
-    border-radius: 4px;
+    border-radius: 16px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 16px;
