--- a/FrontEnd/src/pages/manager/account/userM.css
+++ b/FrontEnd/src/pages/manager/account/userM.css
@@ -47,16 +47,18 @@
 }
 
 .user-search-input {
+    box-sizing: border-box;
     width: 85%;
     height: 40px;
     border-radius: 4px;
+    padding-left: 16px;
 }
 
 .user-search-button {
     background-color: var(--blue);
     margin-left: 20px;
     width: 10%;
-    border-radius: 4px;
+    border-radius: 16px;
 }
 
 .user-pagination {
@@ -70,7 +72,7 @@
     width: 160px;
     height: 40px;
     border: none;
-    border-radius: 4px;
+    border-radius: 16px;
     background-color: var(--blue);
     color: var(--white);
     font-size: 16px;
