--- a/FrontEnd/src/pages/user/investment/investment.css
+++ b/FrontEnd/src/pages/user/investment/investment.css
@@ -16,6 +16,8 @@
 }
 
 .investment-stock-input {
+    box-sizing: border-box;
+    padding-left: 16px;
     width: 60%;
     height: 40px;
     border-radius: 4px;
@@ -26,7 +28,7 @@
     padding: 12px 20px;
     margin-left: 20px;
     margin-bottom: 20px;
-    border-radius: 4px;
+    border-radius: 16px;
 }
 
 .investment-table {
